Changes to be committed: 	new file:   Collection_data/Aksjoner med funn _Ny protokoll_fra april 2020, med siste data fra nylige ryddeaksjoner.xlsx 	modified:   Collection_data/data.ipynb 	new file:   Collection_data/data_for_pbix.ipynb 	new file:   Collection_data/new_data/MonthlyDataCumsum.csv 	new file:   Collection_data/new_data/MostFoundCountry.csv 	new file:   Collection_data/new_data/MostFoundMunicipality.csv 	new file:   Collection_data/new_data/MunicipalityCategoricalDivision.csv new file:   Collection_data/new_data/PercentageCategorySplit.csv new file:   Collection_data/new_data/RyddeDataCleanedUp.csv 	new file:   Collection_data/new_data/RyddeTotalData.csv 	new file:   Collection_data/rydde_data.pbix

--- a/Collection_data/data.ipynb
+++ b/Collection_data/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
        "       'geom_wkt'], dtype=object)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
        "       False, False, False, False, False, False, False, False, False])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,299 +115,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4       52d9\n",
-       "7       2042\n",
-       "9       63f0\n",
-       "13      b76c\n",
-       "20      23fe\n",
-       "23      6110\n",
-       "24      9b2d\n",
-       "26      d44a\n",
-       "31      fafd\n",
-       "32      9aa4\n",
-       "35      d212\n",
-       "38      3853\n",
-       "39      377d\n",
-       "41      ec89\n",
-       "42      a037\n",
-       "51      404a\n",
-       "52      ea40\n",
-       "56      e4bf\n",
-       "61      8223\n",
-       "62      cae6\n",
-       "64      0263\n",
-       "65      e566\n",
-       "66      eecf\n",
-       "67      ebcb\n",
-       "71      c293\n",
-       "72      4371\n",
-       "76      0410\n",
-       "77      b6e0\n",
-       "79      ea4c\n",
-       "90      f867\n",
-       "91      6b64\n",
-       "105     41dc\n",
-       "111     e613\n",
-       "112     b417\n",
-       "114     0605\n",
-       "115     5ea2\n",
-       "116     ed05\n",
-       "118     eaed\n",
-       "119     f367\n",
-       "127     26c6\n",
-       "128     e84b\n",
-       "130     abf0\n",
-       "131     358a\n",
-       "132     c6bc\n",
-       "133     1168\n",
-       "135     ae43\n",
-       "136     fc22\n",
-       "137     7709\n",
-       "140     a856\n",
-       "142     148a\n",
-       "146     769d\n",
-       "147     3cdb\n",
-       "149     53ca\n",
-       "152     27d2\n",
-       "163     5e4e\n",
-       "164     f1de\n",
-       "172     91cd\n",
-       "181     5f29\n",
-       "184     adec\n",
-       "193     13f6\n",
-       "194     0009\n",
-       "199     3c7d\n",
-       "202     f561\n",
-       "203     e6b7\n",
-       "213     f084\n",
-       "215     d3aa\n",
-       "217     ba3b\n",
-       "233     871f\n",
-       "241     32b3\n",
-       "242     f9c6\n",
-       "244     f804\n",
-       "245     d6b9\n",
-       "247     1938\n",
-       "248     9b90\n",
-       "250     b5b9\n",
-       "254     edf5\n",
-       "257     45f6\n",
-       "262     d36d\n",
-       "268     f561\n",
-       "271     5d6e\n",
-       "273     8198\n",
-       "278     d5cc\n",
-       "279     179b\n",
-       "281     1341\n",
-       "283     dd36\n",
-       "285     c946\n",
-       "286     e362\n",
-       "287     d7af\n",
-       "288     cc1d\n",
-       "289     c199\n",
-       "291     10f5\n",
-       "297     5f11\n",
-       "307     25b0\n",
-       "309     1cf2\n",
-       "313     98ae\n",
-       "318     ac08\n",
-       "321     0eaa\n",
-       "324     1183\n",
-       "328     c050\n",
-       "332     6fc0\n",
-       "335     b2b1\n",
-       "337     115c\n",
-       "339     296d\n",
-       "352     73c1\n",
-       "354     147c\n",
-       "361     28d4\n",
-       "364     0bee\n",
-       "372     e272\n",
-       "373     0fcd\n",
-       "376     ddad\n",
-       "380     4c64\n",
-       "384     dbf7\n",
-       "386     8da6\n",
-       "390     a4c1\n",
-       "391     2012\n",
-       "392     70c4\n",
-       "399     32f8\n",
-       "405     df68\n",
-       "418     473a\n",
-       "426     3171\n",
-       "431     8f34\n",
-       "432     4530\n",
-       "436     8ba9\n",
-       "437     4739\n",
-       "440     ca55\n",
-       "459     9185\n",
-       "466     5696\n",
-       "467     7178\n",
-       "469     e616\n",
-       "471     37ec\n",
-       "472     9e20\n",
-       "474     f52d\n",
-       "475     d84d\n",
-       "485     6e3f\n",
-       "493     bcc3\n",
-       "495     d9c2\n",
-       "496     9969\n",
-       "501     a055\n",
-       "503     3f70\n",
-       "507     84e6\n",
-       "513     9e9c\n",
-       "514     22fa\n",
-       "516     405c\n",
-       "517     f31e\n",
-       "518     074d\n",
-       "532     5d43\n",
-       "533     223c\n",
-       "540     7ad0\n",
-       "541     a56e\n",
-       "553     d308\n",
-       "555     a371\n",
-       "567     11a7\n",
-       "569     db45\n",
-       "588     fb98\n",
-       "589     dd30\n",
-       "590     fbc3\n",
-       "594     8c94\n",
-       "596     2a83\n",
-       "615     c16e\n",
-       "618     322c\n",
-       "639     06be\n",
-       "655     889f\n",
-       "662     11c3\n",
-       "668     bc7e\n",
-       "671     def8\n",
-       "680     c9d0\n",
-       "683     18a1\n",
-       "684     5e6f\n",
-       "690     a5bf\n",
-       "693     1988\n",
-       "739     f54f\n",
-       "746     781f\n",
-       "751     1d34\n",
-       "755     9921\n",
-       "758     caeb\n",
-       "768     5300\n",
-       "769     d528\n",
-       "770     c181\n",
-       "784     827e\n",
-       "786     3d0b\n",
-       "794     c3ac\n",
-       "795     1af3\n",
-       "798     0614\n",
-       "799     936f\n",
-       "800     f583\n",
-       "803     8860\n",
-       "806     7f12\n",
-       "807     0290\n",
-       "838     f4d1\n",
-       "839     8692\n",
-       "841     0c08\n",
-       "843     6ff2\n",
-       "846     888c\n",
-       "847     a1cc\n",
-       "849     3a5f\n",
-       "853     409d\n",
-       "855     bf1e\n",
-       "859     fe16\n",
-       "864     3696\n",
-       "865     f801\n",
-       "876     f2b1\n",
-       "880     c4d5\n",
-       "883     25b7\n",
-       "884     1ec8\n",
-       "888     9bc1\n",
-       "889     a98e\n",
-       "919     53e3\n",
-       "924     4c29\n",
-       "929     0422\n",
-       "931     c7f0\n",
-       "932     2bfa\n",
-       "936     e503\n",
-       "944     0067\n",
-       "949     ab14\n",
-       "950     4a37\n",
-       "953     f018\n",
-       "956     ef7a\n",
-       "961     14a4\n",
-       "963     2f15\n",
-       "964     5817\n",
-       "967     f87f\n",
-       "973     bc48\n",
-       "992     0c43\n",
-       "996     d233\n",
-       "997     3229\n",
-       "998     9bb3\n",
-       "999     7d0b\n",
-       "1002    622a\n",
-       "1015    52c4\n",
-       "1024    f041\n",
-       "1029    b745\n",
-       "1031    fe87\n",
-       "1032    b57d\n",
-       "1036    3dda\n",
-       "1037    3201\n",
-       "1038    50e7\n",
-       "1041    e3e0\n",
-       "1042    a226\n",
-       "1044    ac6d\n",
-       "1045    1530\n",
-       "1049    3fab\n",
-       "1052    de33\n",
-       "1054    8feb\n",
-       "1055    51b7\n",
-       "1056    24ca\n",
-       "1063    7a75\n",
-       "1077    a5e5\n",
-       "1078    5c6f\n",
-       "1081    7fd2\n",
-       "1084    3ed1\n",
-       "1090    805b\n",
-       "1094    1dc7\n",
-       "1098    547b\n",
-       "1099    2ea7\n",
-       "1123    15b0\n",
-       "1136    3e34\n",
-       "1137    18e4\n",
-       "1140    f994\n",
-       "1141    24d3\n",
-       "1142    ff74\n",
-       "1144    23c1\n",
-       "1146    b70c\n",
-       "1147    ed81\n",
-       "1148    1c02\n",
-       "1151    6434\n",
-       "1152    12e6\n",
-       "1153    beb4\n",
-       "1154    2e82\n",
-       "1156    afb4\n",
-       "1160    7700\n",
-       "1161    3cbe\n",
-       "1162    60a0\n",
-       "Name: join_code, dtype: object"
+       "array(['Vestland', 'Troms og Finnmark', 'Nordland', 'Rogaland', 'Oslo',\n",
+       "       'Møre og Romsdal', 'Trøndelag', 'Innlandet', 'Viken',\n",
+       "       'Vestfold og Telemark', 'Agder', 'Utlandet', 'Til sjøs'],\n",
+       "      dtype=object)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rydde_data['join_code'].dropna()\n"
+    "rydde_data['county_name'].unique()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +158,7 @@
        "Name: cleaning_code, Length: 1163, dtype: object"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +192,7 @@
        "Name: adopted, dtype: object"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +247,7 @@
        "Name: kommentar, dtype: object"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +278,7 @@
        "Name: media_files, Length: 1163, dtype: int64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +309,7 @@
        "Name: geom_wkt, Length: 1163, dtype: object"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +343,7 @@
        "Name: serveringssteder, dtype: object"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +365,7 @@
        "87"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +474,7 @@
        "        <AxesSubplot:>, <AxesSubplot:>, <AxesSubplot:>]], dtype=object)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -767,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +511,7 @@
        "Name: uidentifiserte_plastbiter_over_50cm, dtype: float64"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
