Joined the three datasets and made some of the data for pbi

--- a/Collection_data/updated_data_pbix.ipynb
+++ b/Collection_data/updated_data_pbix.ipynb
@@ -13,7 +13,7 @@
     "pd.set_option('display.max_columns', 500)\n",
     "pd.set_option('display.width', 1000)\n",
     "\n",
-    "rydde_data = pd.read_excel(\"Ryddestatistikk 17-03-2023.xlsx\")"
+    "rydde_data = pd.read_excel(\"rydde_data/Ryddestatistikk 17-03-2023.xlsx\")"
    ]
   },
   {
